get and post api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=springSecurityLearn
+
+# Spring security
+spring.security.user.name=robert
+spring.security.user.password=@Google@
