--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.application.name=springSecurityLearn
 # Spring security
 spring.security.user.name=robert
 spring.security.user.password=@Google@
+
+# DB configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_security
+spring.datasource.username=robert
+spring.datasource.password=@Google@
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.servlet.session.cookie.same-site=strict
+
