Oauth 2 implemetation | with google  github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.servlet.session.cookie.same-site=strict
 
+#Oauth | properties
+#for Google
+#spring.security.oauth2.client.registration.google.client-id={gogole_client_id}
+#spring.security.oauth2.client.registration.google.client-secret={secret-id}
+#
+##for GitHub
+#spring.security.oauth2.client.registration.github.client-id={github_client_id}
+#spring.security.oauth2.client.registration.github.client-secret={github_secret_id}
+
